force-app/main/default/objects/Quickbook_Invoice__c/Quickbook_Invoice__c.object-meta.xml
<CustomObject>
    <label>Quickbook Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbook Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>