force-app/main/default/objects/Quickbook_Invoice__c/fields/Quickbook_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Invoice_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Quickbook Invoice Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>