force-app/main/default/objects/Quickbook_Invoice__c/fields/Quickbook_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Invoice_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://app.qbo.intuit.com/app/invoice?txnId=&quot; + Quickbook_Invoice_Id__c, &quot;View&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbook Invoice Link</label>
    <type>Text</type>
</CustomField>