force-app/main/default/objects/Quickbook_Invoice__c/fields/Quickbook_Status_Backend__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Status_Backend__c</fullName>
    <label>Quickbook Status (Backend)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>