force-app/main/default/objects/Quickbook_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Balance_Due__c = 0 , 
	&apos;Paid&apos;,  
	IF( Balance_Due__c &lt; Total_Amount__c , 
		&apos;Partially Paid&apos;, 
		&apos;Unpaid&apos;
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>