force-app/main/default/objects/Quickbook_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quickbook_Invoice_Id__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>