force-app/main/default/objects/Quickbook_Invoice__c/listViews/APPropoz_Solutions.listView-meta.xml
<ListView>
    <fullName>APPropoz_Solutions</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>APPropoz Solutions</value>
    </filters>
    <label>APPropoz Solutions</label>
</ListView>