force-app/main/default/objects/Quickbook_Invoice__c/listViews/Auxano_Technology_Consultants_LLC.listView-meta.xml
<ListView>
    <fullName>Auxano_Technology_Consultants_LLC</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Auxano Technology Consultants LLC</value>
    </filters>
    <label>Auxano Technology Consultants LLC</label>
</ListView>