force-app/main/default/objects/Quickbook_Invoice__c/listViews/Axelerant_Technologies_Inc.listView-meta.xml
<ListView>
    <fullName>Axelerant_Technologies_Inc</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>&quot;Axelerant Technologies, Inc.&quot;</value>
    </filters>
    <label>Axelerant Technologies, Inc.</label>
</ListView>