force-app/main/default/objects/Quickbook_Invoice__c/listViews/Optum_Healthcare.listView-meta.xml
<ListView>
    <fullName>Optum_Healthcare</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Optum Healthcare</value>
    </filters>
    <label>Optum Healthcare</label>
</ListView>