force-app/main/default/objects/Quickbook_Invoice__c/listViews/Pasig_and_Hudson.listView-meta.xml
<ListView>
    <fullName>Pasig_and_Hudson</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Pasig and Hudson</value>
    </filters>
    <label>Pasig and Hudson</label>
</ListView>