force-app/main/default/objects/Quickbook_Invoice__c/listViews/Seas_The_Cloud.listView-meta.xml
<ListView>
    <fullName>Seas_The_Cloud</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Seas The Cloud</value>
    </filters>
    <label>Seas The Cloud</label>
</ListView>