force-app/main/default/objects/Quickbook_Invoice__c/listViews/THR_Property_Management_L_P.listView-meta.xml
<ListView>
    <fullName>THR_Property_Management_L_P</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>THR Property Management L.P.</value>
    </filters>
    <label>THR Property Management L.P.</label>
</ListView>