force-app/main/default/objects/Quickbook_Invoice__c/listViews/Tradeshift_Inc.listView-meta.xml
<ListView>
    <fullName>Tradeshift_Inc</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Sub_Total__c</columns>
    <columns>Tax__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Tradeshift Inc.</value>
    </filters>
    <label>Tradeshift Inc.</label>
</ListView>